--- a/.github/workflows/docs-build-and-deploy.yml
+++ b/.github/workflows/docs-build-and-deploy.yml
@@ -40,12 +40,11 @@ jobs:
         run: |
           build_dir_top="${PWD}/_build"
           cd doc
-          ./build_docs -r "${build_dir_top}" -c -d -v latest && \
-          ./build_docs -r "${build_dir_top}" -c -d -v another && \
-          landing_version="latest"
+          ./build_docs_all_versions "${build_dir_top}"
+          landing_version="master"
           index_html="${build_dir_top}/index.html"
           cp source/_templates/landing.index.html "${index_html}"
-          sed -i "s@PATH/TO/LANDING/PAGE.HTML@versions/latest/html/index.html@" "${index_html}"
+          sed -i "s@PATH/TO/LANDING/PAGE.HTML@versions/master/html/index.html@" "${index_html}"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
