Try to avoid more workflows running on tag push.

--- a/.github/workflows/formatting_python.yml
+++ b/.github/workflows/formatting_python.yml
@@ -2,6 +2,7 @@ name: Check Python formatting
 
 on:
   push:
+    branches: ['main']
     paths:
       - 'python/**'
       - 'cime_config/SystemTests/**'
