--- a/.github/workflows/docker-image-build.yml
+++ b/.github/workflows/docker-image-build.yml
@@ -4,6 +4,7 @@ name: Test building ctsm-docs Docker image and using it to build the docs
 # Configures this workflow to run every time a change in the Docker container setup is pushed to the master branch
 on:
   push:
+    branches: ['*']
     paths:
       - 'doc/ctsm-docs_container/**'
       - '.github/workflows/docker-image-ctsm-docs-build.yml'
