--- a/.gitmodules
+++ b/.gitmodules
@@ -123,8 +123,8 @@ fxDONOTUSEurl = https://github.com/ESMCI/mpi-serial
 
 [submodule "doc-builder"]
 path = doc/doc-builder
-url = https://github.com/ESMCI/doc-builder
-fxtag = v2.0.0
+url = https://github.com/samsrabin/doc-builder
+fxtag = ca7a35dbf5393854b373d3fba26ad02a2eafc44c
 fxrequired = ToplevelOptional
 # Standard Fork to compare to with "git fleximod test" to ensure personal forks aren't committed
 fxDONOTUSEurl = https://github.com/ESMCI/doc-builder
