docs-build-and-deploy: Try fetching.

--- a/.github/workflows/docs-build-and-deploy.yml
+++ b/.github/workflows/docs-build-and-deploy.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Build docs using container
         id: build-docs
         run: |
+          git fetch --all
           bin/git-fleximod update -o
           build_dir_top="${PWD}/_build"
           cd doc
